# tui-lib

./: Cargo.toml
crates/nixtui/: Cargo.toml
examples/: anchors.rs  selector.rs
nixtui-allocator/: Cargo.toml
nixtui-allocator/src/: lib.rs  multy_arena.rs
nixtui-allocator/src/multy_arena/: anyarena.rs  anyvec.rs
src/: input.rs  lib.rs  main.rs  tty.rs  ui.rs  utils.rs
src/tty/: changes.rs  errors.rs  input.rs
src/tty/input/: constants.rs
src/ui/: mod.rs  pane.rs  tui.rs
