[workspace]
members = ["nixtui-allocator"]

[package]
name = "nixtui"
version = "0.1.0"
edition = "2021"

[[example]]
name = "selector"
path = "examples/selector.rs"

[[example]]
name = "anchors"
path = "examples/anchors.rs"

[dependencies]
nix = { version = "0.29.0", features = ["ioctl", "term"] }
nixtui-allocator = { path = "nixtui-allocator"}
