
[package]
name = "nixtui-core"
version = "0.1.0"
edition = "2021"

[[example]]
name = "selector"
path = "examples/selector.rs"

[[example]]
name = "anchors"
path = "examples/anchors.rs"

[dependencies]
nix = { version = "0.29.0", features = ["ioctl", "term"] }
nixtui-allocator = { path = "nixtui-allocator"}
terminfo = "0.9.0"
thiserror = "2.0.11"
